# stockwizard

./: .env.example  LICENSE  README.md  analysis.py  app.py  cached_fetchers.py  claudenotes.md  constants.py  data.py  database.py  disclaimers.py  excel_builder.py  live_data.py  payments.py  portfolio_analysis.py  portfolio_builder.py  portfolio_data.py  portfolio_excel.py  pptx_builder.py  precompute.py  precompute_strategy.py  requirements.txt  strategy.py  stress_test.py  styles.css  validate.py
.claude/skills/: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  LICENSE  README.ja.md  README.md  TODO.md  conftest.py  pyproject.toml
.claude/skills/.github/workflows/: ci.yml
.claude/skills/agents/: scenario-analyst.md  strategy-reviewer.md
.claude/skills/breadth-chart-analyst/: SKILL.md
.claude/skills/breadth-chart-analyst/scripts/: detect_uptrend_ratio.py  extract_chart_right_edge.py  fetch_breadth_csv.py
.claude/skills/breakout-trade-planner/: SKILL.md
.claude/skills/breakout-trade-planner/scripts/: plan_breakout_trades.py  risk_calculator.py
.claude/skills/commands/: scenario-analyzer.md
.claude/skills/docs/: .gitignore  Gemfile  README.md  _config.yml  index.md
.claude/skills/docs/_includes/: nav_footer_custom.html
.claude/skills/docs/en/: getting-started.md  index.md  skill-catalog.md
.claude/skills/docs/internal/: README.md  edge-institutionalization-process.md  edge_candidate_agent_design.md  kanchi-dividend-skills-runbook.md
.claude/skills/docs/ja/: getting-started.md  index.md  skill-catalog.md
.claude/skills/dual-axis-skill-reviewer/references/: llm_review_schema.md  scoring_rubric.md
.claude/skills/earnings-trade-analyzer/scripts/: fmp_client.py
.claude/skills/economic-calendar-fetcher/: SKILL.md
.claude/skills/edge-candidate-agent/agents/: openai.yaml
.claude/skills/edge-candidate-agent/references/: pipeline_if_v1.md  signal_mapping.md
.claude/skills/edge-candidate-agent/scripts/: auto_detect_candidates.py  candidate_contract.py  export_candidate.py  validate_candidate.py
.claude/skills/edge-concept-synthesizer/agents/: openai.yaml
.claude/skills/edge-concept-synthesizer/references/: concept_schema.md
.claude/skills/edge-hint-extractor/: SKILL.md
.claude/skills/edge-pipeline-orchestrator/: SKILL.md
.claude/skills/edge-pipeline-orchestrator/references/: pipeline_flow.md
.claude/skills/edge-signal-aggregator/assets/: default_weights.yaml
.claude/skills/edge-strategy-designer/: SKILL.md
.claude/skills/edge-strategy-designer/agents/: openai.yaml
.claude/skills/edge-strategy-designer/references/: strategy_draft_schema.md
.claude/skills/edge-strategy-designer/scripts/: design_strategy_drafts.py
.claude/skills/edge-strategy-reviewer/references/: review_criteria.md
.claude/skills/edge-strategy-reviewer/scripts/: review_strategy_drafts.py
.claude/skills/examples/daily-market-dashboard/: .env.example  .gitignore  CLAUDE.md  README.md  app.py  (+2 more)
.claude/skills/kanchi-dividend-sop/: SKILL.md
.claude/skills/launchd/: com.trade-analysis.skill-generation-daily.plist  com.trade-analysis.skill-generation-weekly.plist  com.trade-analysis.skill-improvement.plist
.claude/skills/pead-screener/: SKILL.md
.claude/skills/scenario-analyzer/: SKILL.md
.claude/skills/scripts/: generate_skill_docs.py  run_all_tests.sh  run_skill_generation.sh  run_skill_generation_pipeline.py  run_skill_improvement.sh  run_skill_improvement_loop.py
.claude/skills/skill-designer/: SKILL.md
.claude/skills/skill-integration-tester/: SKILL.md
.claude/skills/skill-packages/: backtest-expert.skill  breadth-chart-analyst.skill  breakout-trade-planner.skill  canslim-screener.skill  data-quality-checker.skill  dividend-growth-pullback-screener.skill  downtrend-duration-analyzer.skill  dual-axis-skill-reviewer.skill  earnings-calendar.skill  earnings-trade-analyzer.skill  economic-calendar-fetcher.skill  edge-candidate-agent.skill  edge-concept-synthesizer.skill  edge-hint-extractor.skill  edge-pipeline-orchestrator.skill  edge-signal-aggregator.skill  edge-strategy-designer.skill  edge-strategy-reviewer.skill  exposure-coach.skill  finviz-screener.skill  ftd-detector.skill  institutional-flow-tracker.skill  kanchi-dividend-review-monitor.skill  kanchi-dividend-sop.skill  kanchi-dividend-us-tax-accounting.skill  macro-regime-detector.skill  market-breadth-analyzer.skill  market-environment-analysis.skill  market-news-analyst.skill  market-top-detector.skill  options-strategy-advisor.skill  pair-trade-screener.skill  pead-screener.skill  portfolio-manager.skill  position-sizer.skill  scenario-analyzer.skill  sector-analyst.skill  signal-postmortem.skill  skill-designer.skill  skill-idea-miner.skill  (+12 more)
.claude/skills/strategy-pivot-designer/: SKILL.md
.claude/skills/theme-detector/: SKILL.md
.claude/skills/value-dividend-screener/: SKILL.md
(+328 files in other folders)
