[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This is a scripts-only project, not a Python package
packages = []

[project]
name = "claude-trading-skills"
version = "0.1.0"
description = "Claude Skills for equity investors and traders"
requires-python = ">=3.9"
dependencies = [
    "jsonschema>=4.25.1",
    "pyyaml>=6.0",
    "scipy>=1.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.9.0",
    "bandit[toml]>=1.7.0",
    "detect-secrets>=1.5.0",
    "codespell>=2.3.0",
    "pre-commit>=3.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = [
    "E501",  # line-too-long (handled by formatter)
    "E402",  # module-level import not at top (sys.path manipulation in conftest)
    "B904",  # raise-without-from-inside-except (fix incrementally)
    "B007",  # unused-loop-control-variable (fix incrementally)
    "B017",  # assert-raises-exception (fix incrementally)
]

[tool.ruff.lint.per-file-ignores]
"**/conftest.py" = ["E402"]
"**/test_*.py" = ["E402"]

[tool.pytest.ini_options]
# importlib mode resolves conftest/module name collisions across skills
# (each skill has its own scorer.py, calculators/, helpers.py).
# With importlib, a single `pytest` invocation discovers all tests safely.
# scripts/run_all_tests.sh is kept for backward compatibility.
addopts = "--import-mode=importlib"
testpaths = [
    "skills/backtest-expert/scripts/tests",
    "skills/dual-axis-skill-reviewer/scripts/tests",
    "skills/ftd-detector/scripts/tests",
    "skills/institutional-flow-tracker/scripts/tests",
    "skills/macro-regime-detector/scripts/tests",
    "skills/market-breadth-analyzer/scripts/tests",
    "skills/market-top-detector/scripts/tests",
    "skills/stanley-druckenmiller-investment/scripts/tests",
    # theme-detector excluded: 27+ pre-existing failures + duplicate basenames
    "skills/uptrend-analyzer/scripts/tests",
    "skills/vcp-screener/scripts/tests",
    "skills/earnings-trade-analyzer/scripts/tests",
    "skills/pead-screener/scripts/tests",
    "skills/position-sizer/scripts/tests",
    "skills/data-quality-checker/scripts/tests",
    "skills/edge-strategy-reviewer/scripts/tests",
    "skills/edge-pipeline-orchestrator/scripts/tests",
    "skills/edge-signal-aggregator/scripts/tests",
    "skills/skill-idea-miner/scripts/tests",
    "skills/skill-designer/scripts/tests",
    "skills/trade-hypothesis-ideator/scripts/tests",
    "skills/earnings-calendar/scripts/tests",
    "skills/options-strategy-advisor/scripts/tests",
    # canslim-screener excluded: requires bs4 (optional dep)
    "skills/skill-integration-tester/scripts/tests",
    "skills/trader-memory-core/scripts/tests",
    "skills/breadth-chart-analyst/scripts/tests",
    "skills/economic-calendar-fetcher/scripts/tests",
    "skills/edge-candidate-agent/scripts/tests",
    "skills/edge-concept-synthesizer/scripts/tests",
    "skills/edge-hint-extractor/scripts/tests",
    "skills/edge-strategy-designer/scripts/tests",
    "skills/exposure-coach/scripts/tests",
    "skills/finviz-screener/scripts/tests",
    "skills/kanchi-dividend-review-monitor/scripts/tests",
    "skills/kanchi-dividend-sop/scripts/tests",
    "skills/kanchi-dividend-us-tax-accounting/scripts/tests",
    "skills/market-environment-analysis/scripts/tests",
    "skills/sector-analyst/scripts/tests",
    "skills/strategy-pivot-designer/scripts/tests",
    # pair-trade-screener, portfolio-manager, signal-postmortem: tests/ exists but no test_*.py
    "skills/relative-strength-momentum-scanner/scripts/tests",
    "skills/signal-postmortem-analyzer/scripts/tests",
    "skills/downtrend-duration-analyzer/scripts/tests",
    "skills/moving-average-regime-detector/scripts/tests",
    "skills/breakout-trade-planner/scripts/tests",
    "scripts/tests",
]

[tool.bandit]
targets = ["skills"]
skips = [
    "B101",  # assert used (normal in non-production code)
    "B110",  # try-except-pass
    "B113",  # requests without timeout (pre-existing in test scripts)
    "B310",  # urllib urlopen (used for FMP API calls with validated URLs)
    "B311",  # random (used for non-security skill selection)
    "B404",  # import subprocess (needed for test runner)
    "B603",  # subprocess without shell=true (intentionally safe pattern)
]

[tool.codespell]
skip = ".venv,*.json,*.csv,*.baseline,skill-packages,*.pyc,__pycache__"
ignore-words-list = "trough,ore,cna,acn,blok,hims,pont,claus,theses"

[tool.coverage.run]
source = ["skills"]

[tool.coverage.report]
fail_under = 40
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
]
